--- a/Employee_Salary_Prediction.ipynb
+++ b/Employee_Salary_Prediction.ipynb
@@ -4284,7 +4284,7 @@
       "cell_type": "code",
       "source": [
         "import os\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n"
+        "os.environ[\"OPENAI_API_KEY\"] = \"sk-xxxxxxxxxxxxxx"\n"
       ],
       "metadata": {
         "id": "XCqi2NFonlAP"
