--- a/Employee_Salary_Prediction.ipynb
+++ b/Employee_Salary_Prediction.ipynb
@@ -4284,7 +4284,7 @@
       "cell_type": "code",
       "source": [
         "import os\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"sk-xxxxxxxxxxxxxx"\n"
+        "os.environ[\"OPENAI_API_KEY\"] = \"sk-dbclqsdbmnqsd clqhjsbfvqsnvsmncvjhsbqweuhdadncAKXJNCjdhfboirfqhdbscdncqwhbdcqbdcadcqlskbvlqfbvqsvqsnvvkjsfvqfvsvjnwkadkjqnrgerjnfvfvlrngnerqernqeefmqwoimsdeknrjrfefdkmfkerjtgetgfvmkdsvlhdfbvl"\n"
       ],
       "metadata": {
         "id": "XCqi2NFonlAP"
